[backend] #1 #42 add login and register functionality